# E3Studio

./: .dockerignore  .editorconfig  .gitignore  App.xaml  App.xaml.cs  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  E3Studio.csproj  E3Studio.sln  E3Studio_nhisrkj0_wpftmp.csproj  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md  SECURITY.md  build.ps1  build.sh  docker-compose.yml  launch.ps1  launch.sh  vcpkg.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  post_processor_request.md
.github/workflows/: build.yml  release.yml
CAM/: ArcFitter.cs  CollisionSimulator.cs  LeadInOutGenerator.cs  NestingEngine.cs  RealtimeSimulator.cs  SimulationController.cs  StockRemovalSimulator.cs  TabGenerator.cs  ToolpathEngine.cs  ToolpathOptimizer.cs  ToolpathVisualizer3D.cs  VCarveEngine.cs
Controls/: LayerPanel.xaml  LayerPanel.xaml.cs  ToolpathListPanel.xaml  ToolpathListPanel.xaml.cs
Dialogs/: GCodeExportDialog.xaml  GCodeExportDialog.xaml.cs  GridSnapSettingsDialog.xaml  GridSnapSettingsDialog.xaml.cs  MaterialLibraryDialog.xaml  MaterialLibraryDialog.xaml.cs  PostProcessorDialog.xaml  PostProcessorDialog.xaml.cs  SettingsDialog.xaml  SettingsDialog.xaml.cs  StockSetupDialog.xaml  StockSetupDialog.xaml.cs  ToolLibraryDialog.xaml  ToolLibraryDialog.xaml.cs  ToolpathDialog.xaml  ToolpathDialog.xaml.cs
Models/: AppSettings.cs  Machine.cs  Material.cs  Project.cs  StlModel3D.cs  Stock.cs  Tool.cs  Toolpath.cs
Resources/: ThemeResources.xaml
Services/: ClipboardManager.cs  DxfImporter.cs  GCodeGenerator.cs  GCodeImporter.cs  GerberImporter.cs  LocalizationService.cs  MeasurementTool.cs  PdfImporter.cs  ProjectSerializer.cs  SettingsManager.cs  StepIgesImporter.cs  StlImporter.cs  SvgImporter.cs  ThemeService.cs  ThreeMfImporter.cs  UndoRedoManager.cs
Services/Hardware/: ProbeController.cs  SerialCommunication.cs
Services/PostProcessor/: GrblPostProcessor.cs  IndustrialPostProcessors.cs  LinuxCNCPostProcessor.cs  Mach3PostProcessor.cs  PostProcessorBase.cs  PostProcessorOptions.cs
docs/: API.md  ARCHITECTURE.md  POST_PROCESSORS.md
publish/: E3Studio.deps.json
src/: main.cpp
src/ai/: AIOptimizer.cpp  CMakeLists.txt  CuttingParameterPredictor.cpp  CuttingParameterPredictor.h
src/api/: APIServer.cpp  APIServer.h  CMakeLists.txt  MessageHandler.cpp  MessageHandler.h
src/core/: Application.cpp  Application.h  CMakeLists.txt  EventBus.cpp  EventBus.h  JsonEnums.h  Logger.cpp  Logger.h  ProjectManager.cpp  ProjectManager.h  ThreadPool.cpp  ThreadPool.h
src/geometry/: BRepProcessor.cpp  CMakeLists.txt  GeometryKernel.cpp  GeometryKernel.h  GeometryUtils.cpp  MeshLoader.cpp
src/machine/: CMakeLists.txt  MachineKinematics.cpp  MachineKinematics.h
src/postprocessor/: CMakeLists.txt  GCodeGenerator.cpp  GCodeGenerator.h
src/simulation/: CMakeLists.txt  SimulationEngine.cpp  SimulationEngine.h
src/toolpath/: CMakeLists.txt  Offsetter.cpp  PathOptimizer.cpp  Toolpath.h  ToolpathEngine.cpp  ToolpathEngine.h
src/toolpath/operations/: AdaptiveClearingOperation.cpp  AdaptiveClearingOperation.h  ContourOperation.cpp  ContourOperation.h  DrillingOperation.cpp  DrillingOperation.h  OperationHelpers.h  PocketOperation.cpp  PocketOperation.h  SurfaceFinishingOperation.cpp  SurfaceFinishingOperation.h  ThreadingOperation.cpp  ThreadingOperation.h
tests/E3Studio.Tests/: CamEngineTests.cs  E3Studio.Tests.csproj
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/ExportPanel/: ExportPanel.tsx
ui/src/components/OperationPanel/: OperationPanel.tsx
ui/src/components/SimulationPanel/: SimulationPanel.tsx
ui/src/components/ToolPanel/: ToolPanel.tsx
ui/src/components/Toolbar/: Toolbar.tsx
ui/src/components/Viewport3D/: Viewport3D.tsx
ui/src/lib/: toolpathViz.ts  wsClient.ts
ui/src/lib/i18n/: en.json  index.ts  tr.json
ui/src/store/: useStore.ts
